-Major code refactor -all properties are centralized on application.yml, and are injected via property holder classes (got rid of Constants.java mess). Closes #70. -both newBook.html and editBook.html are merged into a single template: bookForm.html. Also, BookController has been simplified accordingly. -both newCategory.html and editCategory.html are merged into a single template: categoryForm.html. Also, CategoryController has been simplified accordingly. -added new validation policy: all backend validations are performed on dto classes. Entity classes are no longer responsible for validation. -In order to maximize flexibility, all validation parameters (regex, numbers, etc) are maintain in application.yml and are used in validation through custom validation classes. -added front end validation to comment field on user deletion (see #80)

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -43,12 +43,12 @@
                 <!-- right side buttons -->
                 <div class="col-sm-2 bg-white" >
                     <div sec:authorize="!hasRole('ADMIN')">
-                        <button class="addBook btn btn-outline-info btn-lg align-center" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
+                        <button class="addBook btn btn-outline-info btn-lg align-center" th:id="'ab-' + ${book.id}">
                             Add to Cart<i class="fas fa-cart-plus ml-2"></i>
                         </button>
                     </div>
                     <div sec:authorize="hasRole('ADMIN')">
-                        <a class="btn btn-outline-info btn-xl align-center" th:href="@{/admin/editBook/{id}(id=${book.id})}" data-toggle="tooltip" title="Edit Book">
+                        <a class="btn btn-outline-info btn-xl align-center" th:href="@{/admin/bookForm?id={id}(id=${book.id})}">
                             Edit Book<i class="fas fa-pen fa-2x ml-2"></i>
                         </a>
                     </div>
