--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -17,7 +17,7 @@
                 <div class="col-sm-8 bg-white" id="root-hook">
                     <!-- new category -->
                     <div class="my-2">
-                        <a class="btn btn-outline-secondary align-center px-4" th:href="@{/admin/newCategory}">
+                        <a class="btn btn-outline-secondary align-center px-4" th:href="@{/admin/categoryForm}">
                             <i class="fas fa-folder-plus fa-lg mr-4"></i>New Category
                         </a>
                     </div>
