--- a/src/main/resources/templates/resetPassword.html
+++ b/src/main/resources/templates/resetPassword.html
@@ -20,7 +20,7 @@
                         <!-- email -->
                         <div class="form-group">
                             <label for="email">E-mail:</label>
-                            <input class="form-control" type="email" name="email" id="email" placeholder="enter your email" required th:pattern="${emailPattern}">
+                            <input class="form-control" type="email" name="email" id="email" placeholder="enter your email" required th:pattern="${patterns.email}">
                             <div class="invalid-feedback">Please fill out this field with your email</div>
                         </div>
                         <!-- save or cancel -->
