--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -2,39 +2,42 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
       lang="en">
-    <head th:replace="fragments/components::head('New Book')"></head>
+    <head th:replace="fragments/components::head('Book Form')"></head>
     <body>
         <div class="container-fluid">
             <!-- header -->
             <div th:replace="fragments/components::header"></div>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
-            <div th:replace="fragments/components::title(text = 'New Book')"></div>
+            <!-- title -->
+            <div th:replace="fragments/components::title(text = 'Book Form')"></div>
+            <!-- main content -->
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8">
-                    <form class="needs-validation" novalidate id="isbnForm" th:action="@{/admin/newBook}" th:object="${formBook}" method="POST" enctype="multipart/form-data" action="#">
+                    <form class="needs-validation" novalidate id="isbnForm" th:action="@{/admin/bookForm}" th:object="${bookForm}" method="POST" enctype="multipart/form-data" action="#">
+                        <input type="hidden" th:field="*{bookId}"/>
                         <div th:replace="fragments/components::backendGenericObjectFieldErrors"></div>
                         <div class="form-row">
                             <div class="col-sm-6 bg-light">
                                 <!-------------------------------------------------------------------------Title-->
                                 <div class="form-group">
                                     <label for="title">Title:</label>
-                                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${TEXT_BASIC}">
+                                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${patterns.textBasic}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('title')"></div>
                                 <!-------------------------------------------------------------------------Publisher-->
                                 <div class="form-group">
                                     <label for="publisher">Publisher:</label>
-                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${TEXT_BASIC}">
+                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${patterns.textBasic}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('publisherName')"></div>
                                 <!-------------------------------------------------------------------------Year-->
                                 <div class="form-group">
                                     <label for="year">Year of Publication:</label>
-                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${YEAR}">
+                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${patterns.year}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('year')"></div>
@@ -73,7 +76,7 @@
                                 <!-------------------------------------------------------------------------Description-->
                                 <div class="form-group">
                                     <label for="description">Description:</label>
-                                    <textarea class="form-control" rows="5" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${TEXT_LONG}"></textarea>
+                                    <textarea class="form-control" rows="5" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${patterns.textLong}"></textarea>
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('description')"></div>
@@ -85,8 +88,8 @@
                                     <div id="author0">
                                         <label for="authorFirstName0">Author/s:</label>
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName0}" id="authorFirstName0" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName0}" id="authorLastName0" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName0}" id="authorFirstName0" placeholder="First Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName0}" id="authorLastName0" placeholder="Last Name" th:pattern="${patterns.textBasic}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: block" type="button" id="showAuthor1" title="Add Author"><i class="fas fa-plus"></i></button>
                                             </div>
@@ -98,8 +101,8 @@
                                     <!------------------------------------------------Author 1-->
                                     <div id="author1" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${patterns.textBasic}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor2" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor1" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -112,8 +115,8 @@
                                     <!------------------------------------------------Author 2-->
                                     <div id="author2" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName2}" id="authorFirstName2" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName2}" id="authorLastName2" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName2}" id="authorFirstName2" placeholder="First Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName2}" id="authorLastName2" placeholder="Last Name" th:pattern="${patterns.textBasic}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor3" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor2" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -126,8 +129,8 @@
                                     <!------------------------------------------------Author 3-->
                                     <div id="author3" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName3}" id="authorFirstName3" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName3}" id="authorLastName3" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName3}" id="authorFirstName3" placeholder="First Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName3}" id="authorLastName3" placeholder="Last Name" th:pattern="${patterns.textBasic}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor4" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor3" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -140,8 +143,8 @@
                                     <!------------------------------------------------Author 4-->
                                     <div id="author4" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName4}" id="authorFirstName4" placeholder="First Name" th:pattern="${TEXT_BASIC}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName4}" id="authorLastName4" placeholder="Last Name" th:pattern="${TEXT_BASIC}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName4}" id="authorFirstName4" placeholder="First Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName4}" id="authorLastName4" placeholder="Last Name" th:pattern="${patterns.textBasic}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor4" title="Delete Author"><i class="fas fa-minus"></i></button>
                                             </div>
@@ -154,7 +157,7 @@
                                 <!-------------------------------------------------------------------------ISBN-->
                                 <div class="form-group">
                                     <label for="isbn">ISBN:</label>
-                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${ISBN}">
+                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${patterns.isbnCode}">
                                     <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('isbn')"></div>
@@ -171,21 +174,21 @@
                                 <!-------------------------------------------------------------------------Pages-->
                                 <div class="form-group">
                                     <label for="numPages">Number of Pages:</label>
-                                    <input class="form-control" type="number" th:field="*{numPages}" id="numPages" placeholder="enter number of pages" value="1" th:min="${MIN_NUM_PAGES}" th:max="${MAX_NUM_PAGES}">
+                                    <input class="form-control" type="number" th:field="*{numPages}" id="numPages" placeholder="enter number of pages" value="1" th:min="${numbers.pagesMin}" th:max="${numbers.pagesMax}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('numPages')"></div>
                                 <!-------------------------------------------------------------------------Stock-->
                                 <div class="form-group">
                                     <label for="stock">Units in Stock:</label>
-                                    <input class="form-control" type="number" th:field="*{stock}" id="stock" placeholder="enter stock" th:min="${MIN_NUM_STOCK}" th:max="${MAX_NUM_STOCK}">
+                                    <input class="form-control" type="number" th:field="*{stock}" id="stock" placeholder="enter stock" th:min="${numbers.stockMin}" th:max="${numbers.stockMax}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('stock')"></div>
                                 <!-------------------------------------------------------------------------Price-->
                                 <label for="price">Price:</label>
                                 <div class="input-group mb-3">
-                                    <input class="form-control" type="text" th:field="*{price}" id="price" placeholder="enter price" th:pattern="${PRICE}">
+                                    <input class="form-control" type="text" th:field="*{price}" id="price" placeholder="enter price" th:pattern="${patterns.price}">
                                     <div class="input-group-append">
                                         <span class="input-group-text">€</span>
                                     </div>
@@ -202,6 +205,7 @@
                 </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
+            <!-- footer -->
             <footer th:replace="fragments/components::footer"></footer>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
