--- a/src/main/resources/templates/editPassword.html
+++ b/src/main/resources/templates/editPassword.html
@@ -15,7 +15,7 @@
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
-                    <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${formPassword}" method="POST" action="#">
+                    <form class="needs-validation" novalidate id="form" th:action="@{/editPassword}" th:object="${passwordForm}" method="POST" action="#">
                         <!-- Current Password -->
                         <div class="form-group">
                             <label for="currentPassword">Current Password:</label>
@@ -26,7 +26,7 @@
                         <!-- New Password -->
                         <div class="form-group">
                             <label for="newPassword">New Password:</label>
-                            <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${passwordPattern}" th:title="#{password.invalidFormat}"/>
+                            <input class="form-control" type="password" th:field="*{password}" id="newPassword" placeholder="enter new password" required th:pattern="${patterns.password}" th:title="#{password.invalidFormat}"/>
                             <div class="invalid-feedback" th:text="#{password.invalidFormat}">Please fill out this field with a valid password</div>
                         </div>
                         <div th:replace="fragments/components::backendSpecificObjectFieldErrors('password')"></div>
