--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -47,7 +47,7 @@
                                 <li class="nav-item dropdown" sec:authorize="isAuthenticated() && !hasRole('ADMIN')">
                                     <a class="nav-link dropdown-toggle text-white font-weight-bold" href="#" data-toggle="dropdown">My Account</a><!--id="navbardrop"-->
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" th:href="@{/user/editProfile}">Edit Profile</a>
+                                        <a class="dropdown-item" th:href="@{/user/profileForm}">Edit Profile</a>
                                         <a class="dropdown-item" th:href="@{/user/editEmail}">Edit Email</a>
                                         <a class="dropdown-item" th:href="@{/editPassword}">Edit Password</a>
                                         <a class="dropdown-item" th:href="@{/user/deleteUser}">Delete Account</a>
