--- a/src/main/resources/templates/profileForm.html
+++ b/src/main/resources/templates/profileForm.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
-                    <form class="needs-validation" novalidate th:action="@{/user/editProfile}" th:object="${profile}" method="POST" action="#">
+                    <form class="needs-validation" novalidate th:action="@{/user/profileForm}" th:object="${profileForm}" method="POST" action="#">
                         <!-- firstname -->
                         <div class="form-group">
                             <label for="firstName">First Name:</label>
