-fixed problem with new-image -added exception management to ImageController

--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -63,12 +63,14 @@
                                 </div>
                                 <!-------------------------------------------------------------------------New Image-->
                                 <div class="form-group">
+                                    <!-- stored/new switch -->
                                     <div class="pretty p-default p-round p-thick mb-2">
                                         <input type="checkbox" id="switch"/>
                                         <div class="state p-info-o">
                                             <label for="switch">Select New Image:</label>
                                         </div>
                                     </div>
+                                    <!-- new-image input -->
                                     <input class="form-control" type="file" th:field="*{image}" id="input2" disabled accept="image/*" required/>
                                     <div class="invalid-feedback">Please select an image</div>
                                 </div>
