--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -16,19 +16,17 @@
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
                     <!-- new image form -->
-                    <p class="my-1">Select a new image:</p>
-                    <form class="needs-validation my-2" novalidate th:action="@{/admin/newImage}" method="POST" enctype="multipart/form-data" action="#">
-                        <div class="form-group my-2">
-                            <input class="form-control" type="file" th:name="image" accept="image/*" required/>
+                    <p class="mt-1 mb-0">Select a new image:</p>
+                    <form class="needs-validation mt-1" novalidate th:action="@{/admin/newImage}" th:object="${imageWrapper}" method="POST" enctype="multipart/form-data" action="#">
+                        <div class="form-group mb-3">
+                            <input class="form-control" type="file" th:field="*{image}" accept="image/*" required/>
                             <div class="invalid-feedback">Please select an image</div>
                         </div>
-                        <div class="alert alert-danger alert-dismissible fade show my-2" th:each="cv : ${constraintViolations}">
-                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                            <strong>Error: </strong><span th:text="#{image.error}"></span>
-                        </div>
-                        <button th:replace="fragments/components::saveButton"></button>
+                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('image')"></div>
+                        <button class="btn btn-info px-5 my-1" type="submit">Save</button>
                     </form>
                     <!-- images -->
+                    <hr/>
                     <table class="table">
                         <thead class="thead-light">
                             <tr>
