--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -120,7 +120,7 @@
                 <div class="col-sm-8">
                     <!-- books -->
                     <div class="row d-flex flex-column">
-                        <div class="col-sm-12" th:each="book : ${pageOfBooks}">
+                        <div class="col-sm-12" th:each="book : ${pageOfEntities}">
                             <div class="row my-3">
                                 <!-- image -->
                                 <div class="col-sm-3 bg-white">
@@ -224,6 +224,7 @@
         <script th:src="@{/js/ajaxCart.js}"></script>
         <script th:src="@{/js/accordion.js}"></script>
         <script th:src="@{/js/searchCriteria.js}"></script>
+        <!-- pagination functionality -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
         <script th:src="@{/js/paginationLegend.js}"></script>
