--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -52,7 +52,7 @@
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10">
                     <div class="row d-flex align-content-stretch justify-content-between flex-wrap">
-                        <div class="card col-xs-12 col-sm-4 col-lg-2 m-2 p-0" th:each="book : ${pageOfBooks}">
+                        <div class="card col-xs-12 col-sm-4 col-lg-2 m-2 p-0" th:each="book : ${pageOfEntities}">
                             <a th:href="@{/book/{id}(id=${book.id})}"><img class="card-image card-img-top img-responsive" th:src="@{/image/{id}(id=${book.image.id})}"/></a>
                             <div class="card-body">
                                 <a th:href="@{/book/{id}(id=${book.id})}" style="text-decoration: none"><p class="card-title text-responsive text-info font-weight-bold" th:text="${book.title}">title</p></a>
