--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -25,8 +25,14 @@
                         <div th:replace="fragments/components::backendSpecificObjectFieldErrors('images')"></div>
                         <button class="btn btn-info px-5 my-1" type="submit">Save</button>
                     </form>
-                    <!-- images -->
+                    <!-- pagination legend -->
+                    <div class="d-flex align-items-end justify-content-end">
+                        <div class="text-info">
+                            <p th:replace="fragments/components::paginationLegend"></p>
+                        </div>
+                    </div>
                     <hr/>
+                    <!-- images -->
                     <table class="table">
                         <thead class="thead-light">
                             <tr>
@@ -38,7 +44,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr th:each="mi : ${allMetaInfo}">
+                            <tr th:each="mi : ${pageOfEntities}">
                                 <td><span th:text="${mi.name}">name</span></td>
                                 <td><span th:text="${mi.mimeType}">mimeType</span></td>
                                 <td><span th:text="${mi.default}">isDefault</span></td>
@@ -51,6 +57,19 @@
                             </tr>
                         </tbody>
                     </table>
+                    <!-- pagination -->
+                    <div class="row mt-4">
+                        <div class="col-sm-4"></div>
+                        <div class="col-sm-4">
+                            <!-- pagination links -->
+                            <div th:replace="fragments/components::paginationLinks"></div>
+                            <!-- pagination legend -->
+                            <div class="mt-2 text-center text-info">
+                                <p th:replace="fragments/components::paginationLegend"></p>
+                            </div>
+                        </div>
+                        <div class="col-sm-4"></div>
+                    </div>
                 </div>
                 <div class="col-sm-3 bg-white"></div>
             </div>
@@ -61,6 +80,10 @@
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <script th:src="@{/js/enableTooltips.js}"></script>
+        <!-- pagination functionality -->
+        <script th:replace="fragments/components::paginationMvcVariables"></script>
+        <script th:src="@{/js/paginationLinks.js}"></script>
+        <script th:src="@{/js/paginationLegend.js}"></script>
         <!-- modal functionality -->
         <script>
             let baseUrl = "http://localhost:8080/firstmarket/admin/deleteImage/";
