added contactUs message. Closes #64

--- a/src/main/resources/templates/emailConfirmationError.html
+++ b/src/main/resources/templates/emailConfirmationError.html
@@ -18,7 +18,7 @@
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
                         <br/>
-                        <p class="px-2">If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
+                        <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
                         <br/>
                     </div>
                 </div>
