--- a/src/main/resources/templates/emailConfirmationRequest.html
+++ b/src/main/resources/templates/emailConfirmationRequest.html
@@ -18,7 +18,8 @@
                     <hr class="mb-4 mt-0"/>
                     <div class="bg-light">
                         <p class="px-2">You should have received an email with a confirmation link. In order to complete the process, please click on it.</p>
-                        <p class="px-2">Remember to check your spam folder. If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
+                        <p class="px-2">Remember to check your spam folder.</p>
+                        <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
                     </div>
                 </div>
                 <div class="col-sm-3"></div>
