--- a/src/main/resources/templates/resetPasswordConfirmation.html
+++ b/src/main/resources/templates/resetPasswordConfirmation.html
@@ -19,7 +19,7 @@
                     <div class="bg-light">
                         <p class="px-2">You should have received an email with the reset password.</p>
                         <p class="px-2">We strongly recommend that you replace the password provided with a new one.</p>
-                        <p class="px-2">If you need assistance, please <a class="text-info" th:href="@{/contactUs}" style="text-decoration: none">contact us.</a></p>
+                        <p class="px-2"><span th:replace="fragments/components::contactUs"></span></p>
                     </div>
                 </div>
                 <div class="col-sm-3"></div>
